// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowsheetDataGrid renders the row header column as pinned and remaining columns as overflow, all columns as not resizable or selectable and all row cells as selectable 1`] = `
<div
  className="flowsheet-data-grid-container"
  onKeyUp={[Function]}
>
  <ForwardRef
    ariaLabel="Test Flowsheet Data Grid"
    columnHeaderHeight="2.5rem"
    defaultColumnWidth={200}
    hasVisibleColumnHeaders={true}
    id="test-terra-flowsheet-data-grid"
    onCellRangeSelect={[Function]}
    onCellSelect={[Function]}
    overflowColumns={
      [
        {
          "displayName": "March 16",
          "id": "Column-1",
          "isResizable": false,
          "isSelectable": false,
        },
        {
          "displayName": "March 17",
          "id": "Column-2",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    pinnedColumns={
      [
        {
          "displayName": "Vitals",
          "id": "Column-0",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    rowHeaderIndex={0}
    rowHeight="2.5rem"
    rows={
      [
        {
          "cells": [
            {
              "content": "Heart Rate Monitored (bpm)",
              "isSelectable": true,
            },
            {
              "content": "65",
              "isSelectable": true,
            },
            {
              "content": "66",
              "isSelectable": true,
            },
          ],
          "id": "1",
        },
        {
          "cells": [
            {
              "content": "Temperature Oral (degC)",
              "isSelectable": true,
            },
            {
              "content": "36.7",
              "isSelectable": true,
            },
            {
              "content": "36.9",
              "isSelectable": true,
            },
          ],
          "id": "2",
        },
        {
          "cells": [
            {
              "content": "Cardiac Index (L/min/m2)",
              "isSelectable": true,
            },
            {
              "content": "2.25",
              "isSelectable": true,
            },
            {
              "content": "2.28",
              "isSelectable": true,
            },
          ],
          "id": "3",
        },
        {
          "cells": [
            {
              "content": "Oxygen Flow Rate (L/min)",
              "isSelectable": true,
            },
            {
              "content": "63",
              "isSelectable": true,
            },
            {
              "content": "47",
              "isSelectable": true,
            },
          ],
          "id": "4",
        },
      ]
    }
    sections={null}
  />
  <VisuallyHiddenText
    aria-live="polite"
    text={null}
  />
</div>
`;

exports[`FlowsheetDataGrid replaces non-header empty, null, or "--" cell contents with a "No results" visual indicator and hidden text 1`] = `
<div
  className="flowsheet-data-grid-container"
  onKeyUp={[Function]}
>
  <ForwardRef
    ariaLabel="Test Flowsheet Data Grid"
    columnHeaderHeight="2.5rem"
    defaultColumnWidth={200}
    hasVisibleColumnHeaders={true}
    id="test-terra-flowsheet-data-grid"
    onCellRangeSelect={[Function]}
    onCellSelect={[Function]}
    overflowColumns={
      [
        {
          "displayName": "March 16",
          "id": "Column-1",
          "isResizable": false,
          "isSelectable": false,
        },
        {
          "displayName": "March 17",
          "id": "Column-2",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    pinnedColumns={
      [
        {
          "displayName": "Vitals",
          "id": "Column-0",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    rowHeaderIndex={0}
    rows={
      [
        {
          "cells": [
            {
              "content": "Heart Rate Monitored (bpm)",
              "isSelectable": true,
            },
            {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
            {
              "content": "66",
              "isSelectable": true,
            },
          ],
          "id": "1",
        },
        {
          "cells": [
            {
              "content": "Temperature Oral (degC)",
              "isSelectable": true,
            },
            {
              "content": "36.7",
              "isSelectable": true,
            },
            {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
          ],
          "id": "2",
        },
        {
          "cells": [
            {
              "content": "Cardiac Index (L/min/m2)",
              "isSelectable": true,
            },
            {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
            {
              "content": "2.28",
              "isSelectable": true,
            },
          ],
          "id": "3",
        },
        {
          "cells": [
            {
              "content": "",
              "isSelectable": true,
            },
            {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
            {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
          ],
          "id": "4",
        },
      ]
    }
    sections={null}
  />
  <VisuallyHiddenText
    aria-live="polite"
    text={null}
  />
</div>
`;
